<resources>
    <string name="app_name">School Bus Tracker - Driver</string>
    <string name="welcome_txt">Welcome to SBT Driver App</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">email</string>
    <string name="save">Save</string>
    <string name="password">password</string>
    <string name="full_name">full name</string>
    <string name="bus_no">bus number</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="start_trip">Getting status…</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="school_name">School name</string>
    <string name="logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="recovery_message">A recovery link has been sent to your email. Check for steps to reset password and log in.</string>

    <string name="action_settings">Settings</string>
    <string name="google_maps_API_key">AIzaSyAtDZuZNwYtQrRc75IdA2TBaRVBBgkSo_U</string>
    <string name="API_key">AIzaSyDSQR5HonLVinzu7udadK7PfWmcbh_boW8</string>
    <string name="title_activity_maps">Map</string>
    <string name="change_school">Change School</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="settings">Change Password</string>
    <string name="arrived">Arrived at destination</string>
    <string name="picked_children">Picked Children:</string>
    <string name="absent_children">Absent Children:</string>
    <string name="total">Total:</string>
</resources>
