<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/txt_view_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/arrived"
            android:textSize="25sp"
            android:textStyle="bold"
            android:padding="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/picked_children"/>
            <TextView
                android:id="@+id/txt_view_picked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/absent_children"/>

            <TextView
                android:id="@+id/txt_view_absent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/total"/>

            <TextView
                android:id="@+id/txt_view_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
    <com.ebanx.swipebtn.SwipeButton
        android:id="@+id/swipe_button"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:inner_text="SWIPE TO CONTINUE"
        android:layout_margin="8dp"
        app:inner_text_size="18sp"
        app:inner_text_top_padding="10dp"
        app:inner_text_bottom_padding="10dp"
        app:button_image_disabled="@drawable/ic_lock_close"
        app:button_image_enabled="@drawable/ic_lock_open"
        app:button_top_padding="10dp"
        app:button_bottom_padding="10dp"
        app:button_left_padding="10dp"
        app:button_right_padding="10dp"/>

</RelativeLayout>